kubernetes/products-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-db
  namespace: widgetario
spec:
  serviceName: "products-db"
  replicas: 2
  selector:
    matchLabels:
      app: products-db
  template:
    metadata:
      labels:
        app: products-db
      annotations:
        prometheus.io/scrape:"true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port:"80"
    spec:
      containers:
      - name: products-db
        image: widgetario/products-db:postgres-replicated
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
