kubernetes/products-db-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-db
  namespace: widgetario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-db
  template:
    metadata:
      labels:
        app: products-db
      annotations:
        prometheus.io/scrape:"true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port:"80"
    spec:
      containers:
      - name: products-db
        image: widgetario/products-db:21.03
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: products-db
  namespace: widgetario
spec:
  selector:
    app: products-db
  ports:
  - port: 5432
    targetPort: 5432
